remove dependency from ETK DB